1998-05-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1002)

	* Added misc.files_as_tables feature

1998-05-14  Jochen Wiedmann  <joe@ispsoft.de> (0.1001)

	* Initial version
