@@ -6,8 +6,7 @@
 
 sql_parser_t ansiParser = {
     { 0, 0, 0 },
-    { 1 },
-    { 0 }
+    { 1 }
 };
 
 
