@@ -146,9 +146,6 @@ typedef struct {
      struct {
          char join;
      } select;
-     struct {
-         char files_as_tables;
-     } misc;
 } sql_parser_t;
 
 typedef struct sql_stmt_s {
